Feature/relationships (#42)
* initial start of implementation, (my eyes hurt)

* fix rest of impression commands

* split global and local versions into two commands for right now

* fixing issues and continued refactor

* clean-up

* spotless clean-up and version bump, adding first unit test

* spotless

* spotless